k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: burger-backend-service
spec:
  type: NodePort            # change from ClusterIP to NodePort
  selector:
    app: burger-backend
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500      # choose an available port (30000-32767)
