k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: burger-frontend-service
spec:
  type: NodePort
  selector:
    app: burger-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
