k8s/burger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: burger-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    
spec:
  rules:
    - host: burger.local
      http:
        paths:
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: burger-backend-service
                port:
                  number: 5000
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: burger-frontend-service
                port:
                  number: 80
